--- a/static/css/post_main_write.css
+++ b/static/css/post_main_write.css
@@ -23,6 +23,12 @@ form {
   display: flex;
 }
 
+.main_write__title h1 {
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 6px;
+}
+
 .main_write__top__select_row {
   display: flex;
   justify-content: space-between;
@@ -31,27 +37,46 @@ form {
 
 #main_write__top__box_text_number input {
   width: 100%;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
   padding: 1em;
 }
+
+#main_write__top__box_text_number input:hover {
+  border: 1px solid #2253ff;
+}
+
 #main_write__top__box_text_location input {
   width: 100%;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
   padding: 1em;
 }
+
+#main_write__top__box_text_location input:hover {
+  border: 1px solid #2253ff;
+}
+
 #main_write__top__box_text_link input {
   width: 100%;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
   padding: 1em;
 }
+
+#main_write__top__box_text_link input:hover {
+  border: 1px solid #2253ff;
+}
+
 #main_write__top__box_text_tag input {
   width: 100%;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
   padding: 1em;
+}
+
+#main_write__top__box_text_tag input:hover {
+  border: 1px solid #2253ff;
 }
 
 .main_write__dropdown__select_left {
@@ -68,31 +93,40 @@ form {
   width: 48%;
 }
 
+.main_write__top__select_all {
+  width: 100%;
+  margin-top: 15px;
+}
+
 .main_write__dropdown__select_right {
   width: 48%;
   margin-bottom: 15px;
   margin-top: 10px;
 }
 
+#main_write__top__select {
+  margin-top: 30px;
+}
+
 .main_write__top__select_title {
-  font-size: 15px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
 .main_write__title_num {
-  height: 30px;
-  width: 30px;
+  height: 40px;
+  width: 40px;
   background-color: #2253ff;
   border-radius: 100px;
   color: white;
   display: flex;
   justify-content: center;
   margin-right: 15px;
+  margin-top: 3px;
 }
 
 .main_write__title_num h2 {
-  font-size: 23px;
+  font-size: 30px;
   padding-top: 3px;
 }
 
@@ -103,22 +137,20 @@ form {
 .main_write__tag_write__main_content_input {
   height: 35px;
   width: 100%;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
 }
 
 #main_write__title_write__main_content_input input {
-  height: 35px;
+  height: 60px;
   width: 100%;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
+  padding: 1em;
 }
 
-.main_write__tag__main_content_input {
-  padding: 1em;
-  width: 100%;
-  border: 1px solid rgb(162, 162, 162);
-  border-radius: 5px;
+#main_write__title_write__main_content_input input:hover {
+  border: 1px solid #2253ff;
 }
 
 .main_write__tag_write__main {
@@ -127,7 +159,8 @@ form {
 }
 
 .main_write__tag_write__main_title {
-  padding-bottom: 10px;
+  margin-bottom: 20px;
+  font-weight: 700;
 }
 
 #main_write__tag {
@@ -156,10 +189,12 @@ form {
 #main_write__content__btn_cancel {
   border-style: none;
   background-color: rgb(162, 162, 162);
-  border-radius: 7px;
-  padding: 10px 20px;
+  border-radius: 0.5rem;
+  padding: 0.75rem 2rem;
   margin-right: 10px;
+  font-size: 0.9rem;
   color: white;
+  font-weight: 600;
   cursor: pointer;
 }
 
@@ -170,12 +205,13 @@ form {
 #main_write__register_modal_btn {
   border-style: none;
   background-color: #2253ff;
-  border-radius: 7px;
-  padding: 10px 20px;
   color: white;
   margin-left: 10px;
-  font-weight: 300;
   cursor: pointer;
+  border-radius: 0.5rem;
+  padding: 0.75rem 2rem;
+  font-weight: 600;
+  font-size: 0.9rem;
 }
 
 #main_write__content__btn_register h3 {
@@ -200,7 +236,7 @@ form {
 
 #main_write__select_contact select {
   background: white;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -209,9 +245,19 @@ form {
   border-radius: 5px;
   width: 100%;
 }
+
+#main_write__select_contact select:hover {
+  border: 1px solid #2253ff;
+}
+
+#main_write__select_contact label {
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
 #main_write__select_duration select {
   background: white;
-  border: 1px solid rgb(162, 162, 162);
+  border: 1px solid #bfbfbf;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -219,6 +265,15 @@ form {
   cursor: pointer;
   border-radius: 5px;
   width: 100%;
+}
+
+#main_write__select_duration label {
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+#main_write__select_duration select:hover {
+  border: 1px solid #2253ff;
 }
 
 .main_write__caret {
@@ -302,16 +357,64 @@ form {
   border-radius: 5px;
   background-color: white;
   position: fixed;
-  padding: 50px 100px;
+  padding: 20px 0 30px;
   text-align: center;
-  width: 30%;
+  width: 40%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.post_write__modal__content h1 {
+  font-weight: 600;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.post_write__modal__content h3 {
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.post_write__modal__content button {
+  margin-bottom: 10px;
+  border-radius: 5px;
+  background-color: #2253ff;
+  padding: 10px;
+  color: white;
+}
+
+.post_write__modal__content button:hover {
+  color: black;
+}
+
+.post_write__modal__content i {
+  margin-bottom: 30px;
+}
+
+.post_write__modal__close_btn i {
+  position: relative;
+  right: -75px;
 }
 
 .post_write__modal__close_btn {
   cursor: pointer;
+  margin-bottom: 20px;
+  position: relative;
+  right: -180px;
 }
 
 .main_write__content__write_txt {
+  width: 100%;
+}
+
+.main_write__top__box_title {
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.tagify {
   width: 100%;
 }
