--- a/static/css/post_main.css
+++ b/static/css/post_main.css
@@ -30,6 +30,7 @@
   display: flex;
   height: 160px;
   width: 100%;
+  flex-direction: column;
 }
 
 #search_div__top_right {
@@ -450,4 +451,16 @@
   background-color: #e8e8e8;
   border-radius: 5px;
   color: black;
+}
+
+/*main 상단 검색창 정비*/
+
+.main__search_div__top_firstline {
+  width: 100%;
+}
+.main__search_div__top_secondline {
+  width: 100%;
+}
+.main__search_div__top_thirdline {
+  width: 100%;
 }
