--- a/users/templates/users/profile_add.html
+++ b/users/templates/users/profile_add.html
@@ -32,14 +32,14 @@
             onchange="thumbnailImg(event);"
             />
             <label for="id_profile_img">
-                <div id="input__img__container">
+                <div id="input__img__add__container">
                     {% if user.profile_img %}
                     <img src="{{user.profile_img.url}}" alt="profile_img"></img>
                     {% else %}
                     <img src="{% static 'img/moco_symbol.png' %}" alt="profile_img"></img>
                     {% endif %}
                     <!-- <img src="" onerror="this.style.display='none'"> -->
-                    <div id="camera__img">
+                    <div id="camera__add__img">
                         <i class="fa-solid fa-camera fa-2xl"></i>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
         </div>
         <!-- {{form.as_p}} -->
         <div id="profile-add__btn__container">
-          <button id="profile-add__btn" onclick="editConfirm()"ㅋ type="submit">입력 완료</button>
+          <button id="profile-add__btn" onclick="editConfirm()" type="submit">입력 완료</button>
         </div>
   </form>
 </main>
@@ -85,7 +85,7 @@
         reader.onload = function(event) {
           var img = document.createElement("img");
           img.setAttribute("src", event.target.result);
-          document.querySelector("div#input__img__container").appendChild(img);
+          document.querySelector("div#input__img__add__container").appendChild(img);
         };
 
         reader.readAsDataURL(event.target.files[0]);
