Auto stash before merge of "develop" and "origin/develop"
[style] 플레이스 별점

--- a/place/templates/place/update.html
+++ b/place/templates/place/update.html
@@ -63,11 +63,13 @@
           {{ form.category.errors }}
           <div for="{{ form.category.id_for_label }}">장소 분류</div>
           {{ form.category }}
+          <i class="fa-solid fa-angle-down"></i>
         </div>
         <div class="content-write__item">
           {{ form.wifi.errors }}
           <div for="{{ form.wifi_time.id_for_label }}">와이파이</div>
           {{ form.wifi }}
+          <i class="fa-solid fa-angle-down"></i>
         </div>
       </div>
       <div class="content-write__two">
@@ -87,6 +89,7 @@
           {{ form.power_socket.errors }}
           <div for="{{ form.power_socket.id_for_label }}">콘센트</div>
           {{ form.power_socket }}
+          <i class="fa-solid fa-angle-down"></i>
         </div>
         <div class="content-write__item">
           {{ form.rating.errors }}
