--- a/place/templates/place/write.html
+++ b/place/templates/place/write.html
@@ -61,11 +61,13 @@
           {{ form.category.errors }}
           <div for="{{ form.category.id_for_label }}">장소 분류</div>
           {{ form.category }}
+          <i class="fa-solid fa-angle-down"></i>
         </div>
         <div class="content-write__item">
           {{ form.wifi.errors }}
           <div for="{{ form.wifi_time.id_for_label }}">와이파이</div>
           {{ form.wifi }}
+          <i class="fa-solid fa-angle-down"></i>
         </div>
       </div>
       <div class="content-write__two">
@@ -85,6 +87,7 @@
           {{ form.power_socket.errors }}
           <div for="{{ form.power_socket.id_for_label }}">콘센트</div>
           {{ form.power_socket }}
+          <i class="fa-solid fa-angle-down"></i>
         </div>
         <div class="content-write__item">
           {{ form.rating.errors }}
@@ -149,10 +152,6 @@
       <input type="button" value="취소" onclick="back()" />
       <input type="submit" value="등록하기" />
     </div>
-    <!-- <table>
-      {{form.as_table}}
-  </table> 
-  <input type="submit" value="제출"> -->
   </form>
 </div>
 <script>
