--- a/static/css/notice_home.css
+++ b/static/css/notice_home.css
@@ -4,7 +4,12 @@
   margin-bottom: 20px;
   transition: all 0.3s;
   cursor: pointer;
+  width: 100%;
 }
+
+.content-box__itme > div{
+  width: 100%;
+} 
 
 .content-box__itme:hover {
   box-shadow: 0px 4px 10px 2px rgba(171, 186, 189, 0.2);
