--- a/posts/templates/posts/main_revise.html
+++ b/posts/templates/posts/main_revise.html
@@ -1,7 +1,7 @@
 {% extends 'posts/base.html' %} {% block content %}
 <div class="content">
   <form
-    action="{% url 'posts:write' %}"
+    action="{% url 'posts:update' post.id %}"
     method="post"
     enctype="multipart/form-data"
   >
@@ -37,15 +37,22 @@
             <!--드롭다운 아직 연결 안돼서 일단 select box로-->
             <div id="main_write__select_contact">
               진행방식 :
-              <label for="{{form.contact.id_for_label}}"></label>
+              <select id="contact" name="contact" onchange="this.form.submit();">
+                <option value="default">--------</option>
+                <option value="On" {% if sort == "latest" %}selected{% endif %}>온라인</option>
+                <option value="Off" {% if sort == "views" %}selected{% endif %}>오프라인</option>
+                <option value="Mix" {% if sort == "comments" %}selected{% endif %}>혼합</option>
+              </select>
+              <!-- <label for="{{form.contact.id_for_label}}"></label>
               <select name="contact">
-                <option value selected="default">----------</option>
+                <option value selected="{{ key }}">{{ value }}</option>
                 {% for key, value in contacts %}
                 <option value="{{ key }}">{{ value }}</option>
                 {% endfor %}
-              </select>
+              </select> -->
             </div>
           </div>
+
           <!--드롭다운 아직 연결 안돼서 일단 select box로-->
           <!--<div class="main_write__top__select_title">
             <h3>모임형태</h3>
