--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -22,7 +22,8 @@
     <div class="content-right">
             <div id="main_detail__top__like">
               <button id="{{place.id}}" onclick="place_like(this.id)">
-                <i id="blank" class="fa-regular fa-heart"></i>
+                <i id="blank" class="fa-regular fa-heart"></i> <!--비어있는 하트-->
+                <i id="blank" class="fa-solid fa-heart"></i> <!-- 빨간색 채워져 있는 하트-->
                 <span id="like_count">{{place.likes}}</span>
             </button>
             </div>
