--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -107,7 +107,8 @@
             </button>
             <div class="main_detail__top__like">
               <button id="{{post.id}}" onclick="post_like(this.id)">
-                <i id="blank" class="fa-regular fa-heart"></i>
+                <i id="blank" class="fa-regular fa-heart"></i> <!--비어있는 하트-->
+                <i id="blank" class="fa-solid fa-heart"></i> <!-- 빨간색 채워져 있는 하트-->
                 <span id="like_count">{{post.likes}}</span>
               </button>
             </div>
@@ -117,7 +118,8 @@
             <div class="main_detail__top__recruit_done">모집완료</div>
             <div class="main_detail__top__like">
               <button id="{{post.id}}" onclick="post_like(this.id)">
-                <i id="blank" class="fa-regular fa-heart"></i>
+                <i id="blank" class="fa-regular fa-heart"></i> <!--비어있는 하트-->
+                <i id="blank" class="fa-solid fa-heart"></i> <!-- 빨간색 채워져 있는 하트-->
                 <span id="like_count">{{post.likes}}</span>
               </button>
             </div>
