--- a/place/templates/place/home.html
+++ b/place/templates/place/home.html
@@ -57,8 +57,8 @@
         </div>
         <div class="content-box__bottom">
           <span class="content-box__profile">
-              {% if user.profile_img %}
-              <div class="profile_img"><img src="{{user.profile_img.url}}" alt="profile_img"></img></div>
+              {% if place.user.profile_img %}
+              <div class="profile_img"><img src="{{place.user.profile_img.url}}" alt="profile_img"></img></div>
               <div>{{place.user}}</div>
               {% else %}
               <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
