--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -1,4 +1,5 @@
 {% extends 'posts/base.html' %} {% block content %}
+{% load static %}
 <div class="content">
   <div id="main__main_div">
     <form method="GET">
@@ -138,7 +139,13 @@
         </div>
         <div id="main__info_div__post_right">
           <div id="main__info_div__post_right__img">
-            <i class="fa-solid fa-circle-user fa-2x"></i>
+            <span class="content-title__img">
+              {% if post.user.profile_img %}
+              <div class="profile_img"><img src="{{post.user.profile_img.url}}" alt="profile_img"></img></div>
+              {% else %}
+              <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
+              {% endif %}
+            </span>
           </div>
           <div id="main__info_div__post_right__info">
             <div id="main__info_div__post_right__info_name">
