--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -1,4 +1,5 @@
 {% extends 'posts/base.html' %} {% block content %}
+{% load static %}
 <div class="content">
   <div id="main_detail__top">
     <div id="main_detail__top__back_btn">
@@ -21,7 +22,13 @@
         <div id="main_detail__top__title">{{post.title}}</div>
         <div id="main_detail__top__profile">
           <div id="main_detail__top__img">
-            <i class="fa-solid fa-circle-user fa-2x"></i>
+            <span class="content-title__img">
+              {% if post.user.profile_img %}
+              <div class="profile_img"><img src="{{post.user.profile_img.url}}" alt="profile_img"></img></div>
+              {% else %}
+              <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
+              {% endif %}
+            </span>
           </div>
           <div id="main_detail__top__name">
             <span>{{post.user.nickname}}</span>
