--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -149,7 +149,7 @@
           </div>
           <div id="main__info_div__post_right__info">
             <div id="main__info_div__post_right__info_name">
-              <span>김피로</span>
+              <span>{{post.user.nickname}}</span>
             </div>
             <div id="main__info_div__post_right__info_time">
               <span>{{post.published_at|date:"Y-m-d"}}</span>
