--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -12,13 +12,13 @@
         <div class="content-title__info">
           <span class="content-title__img">
             {% if user.profile_img %}
-              <div class="profile_img"><img src="{{user.profile_img.url}}" alt="profile_img"></img></div>
+              <div class="profile_img" style="margin-right: 0.75rem;"><img src="{{user.profile_img.url}}" alt="profile_img"></img></div>
               {% else %}
-              <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
+              <div class="profile_img" style="margin-right: 0.75rem;"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
               {% endif %}
           </span>
           <div class="content-title__left">
-            <span class="content-title__user">{{notice.user}}</span>
+            <span class="content-title__user">{{notice.user.nickname}}</span>
             <span style="margin: 0 0.5rem; color: #8C8C8C;">|</span>
             <span class="content-title__published">{{notice.published_at|date:"Y. m. d" }}</span>
           </div>
