--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -14,7 +14,7 @@
           <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
           {% endif %}
         </span>
-        <span class="content-title__location">{{place.user}}</span>
+        <span class="content-title__nickname">{{place.user.nickname}}</span>
         <span class="content-title__bar">|</span>
         <span class="content-title__published">{{place.published_at|date:"Y. m. d" }}</span>
       </div>
