--- a/users/templates/users/signup_error.html
+++ b/users/templates/users/signup_error.html
@@ -102,16 +102,24 @@
         <p style="font-size: 1rem; font-weight: 900">
           다음 부분을 확인해주세요!
         </p>
+        {% if messages %}
+        {% for message in messages %}
+        <p style="font-size: 1rem; font-weight: 300">
+          1) {{message.message}}
+        </p>
+        {% endfor %}
+        {% else %}
         <p style="font-size: 1rem; font-weight: 300">
           1) 아이디와 비번이 유사하지 않게 작성해주세요.
         </p>
         <p style="font-size: 1rem; font-weight: 300">
           2) 위 항목이 아니라면 기존에 있는 아이디로 가입한 유저가 존재합니다.
         </p>
+        {% endif %}
 
         <div id="signup-err__btns">
           <div id="signup-err__btn">
-            <a onclick="history.go(-1)">회원가입 페이지로 돌아가기</a>
+            <a href="{% url 'users:signup' %}">회원가입 페이지로 돌아가기</a>
           </div>
         </div>
       </div>
