[fix] post update 수정

--- a/posts/templates/posts/main_revise.html
+++ b/posts/templates/posts/main_revise.html
@@ -121,6 +121,10 @@
             name="tag"
           />
         </div>
+        <div>임시로 여기에 확인</div>
+        {% for otag in origin_tag %}
+        <span>{{otag}}</span>
+        {%endfor%}
       </div>
     </div>
     <div id="main_write__content">
