--- a/notice/templates/notice/base.html
+++ b/notice/templates/notice/base.html
@@ -15,6 +15,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico/favicon-32x32.png' %}"/>
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notice_home.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notice_detail.css' %}" />
