--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -20,6 +20,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico/favicon-32x32.png' %}"/>
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_home.css' %}" />
     <link rel="stylesheet" href="{% static 'css/place_detail.css' %}" />
