--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,5 +1,9 @@
 {% extends 'users/account_base.html' %} {% block content %}
 {% load static %}
+{% static 'img/naver_login.png' as naver_button %}
+{% static 'img/google_login.png' as google_button %}
+{% static 'img/kakao_login.png' as kakao_button %}
+{% static 'img/github_login.png' as github_button %}
 <main>
   <form
       action="{% url 'users:signup' %}"
@@ -414,11 +418,33 @@
         <span>간편 회원가입</span>
         <hr noshade />
       </div>
-      <div class="signup__sim__soc">
-        <button>구글</button>
-        <button>네이버</button>
-        <button>카카오</button>
-        <button>깃허브</button>
+
+      {% load socialaccount %} {% providers_media_js %}
+      <div class="login__sim__soc" style="margin-bottom: 5rem;">
+        <div>
+          <form method="post" action="{% provider_login_url 'google' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ google_button }}" height="42" width="152"></button>
+            <!-- <button type="submit">구글</button> -->
+          </form>
+          <form method="post" action="{% provider_login_url 'kakao' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ kakao_button }}" height="40" width="150"></button>
+            <!-- <button type="submit">카카오</button> -->
+          </form>
+        </div>
+        <div>
+          <form method="post" action="{% provider_login_url 'naver' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ naver_button }}" height="40" width="152" style="padding-bottom: 0.1rem;"></button>
+            <!-- <button type="submit">네이버</button> -->
+          </form>
+          <form method="post" action="{% provider_login_url 'github' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ github_button }}" height="40" width="152"></button>
+            <!-- <button type="submit">깃허브</button> -->
+          </form>
+        </div>
       </div>
       
     </div>
